# Enterprise-Project-Intelligence-OS

./: .env.example  .gitignore  AGENTIC-VERBS.md  CLAUDE.md  ENTERPRISE-SCALE-ARCHITECTURE.md  LICENSE-NOTICE.md  ORG-TENANCY.md  PRODUCT.md  README.md  TODOS.md  UI-Design-Thinking.md  package.json  pyproject.toml
Agents/: README.md  pyproject.toml
Agents/agent_core/: __init__.py
Agents/backlog_health/: __init__.py  contract.py  registry.py
Agents/backlog_health/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/backlog_health/prompts/: __init__.py
Agents/critic/: __init__.py
Agents/critic/prompts/: __init__.py
Agents/delivery_forecasting/: __init__.py  contract.py  registry.py
Agents/delivery_forecasting/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/delivery_forecasting/prompts/: __init__.py
Agents/dependency_risk/: __init__.py  contract.py  registry.py
Agents/dependency_risk/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/dependency_risk/prompts/: __init__.py
Agents/evidence_validation/: __init__.py
Agents/evidence_validation/prompts/: __init__.py
Agents/executive_reporting/: __init__.py
Agents/executive_reporting/prompts/: __init__.py
Agents/mitigation_planning/: __init__.py
Agents/mitigation_planning/prompts/: __init__.py
Agents/project_reporting/: __init__.py
Agents/project_reporting/prompts/: __init__.py
Agents/project_status_tracking/: __init__.py  contract.py  registry.py
Agents/project_status_tracking/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/project_status_tracking/prompts/: __init__.py
Agents/quality_risk/: __init__.py  contract.py  registry.py
Agents/quality_risk/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/quality_risk/prompts/: __init__.py
Agents/resource_risk/: __init__.py  contract.py  registry.py
Agents/resource_risk/adapters/: __init__.py  langgraph_adapter.py  other_frameworks.py
Agents/resource_risk/prompts/: __init__.py
Agents/risk_correlation/: __init__.py
Agents/risk_deduplication/: __init__.py
Agents/risk_scoring/: __init__.py
Agents/schedule_risk/: __init__.py  contract.py  registry.py
Agents/schedule_risk/adapters/: __init__.py  langgraph_adapter.py  openai_agents_adapter.py  other_frameworks.py
Agents/schedule_risk/prompts/: __init__.py
Agents/schedule_risk/tools/: __init__.py
Agents/tests/unit/: test_backlog_health.py  test_delivery_forecasting.py  test_dependency_risk.py  test_openai_agents_adapter.py  test_project_status_tracking.py  test_quality_risk.py  test_resource_risk.py  test_review_agents_wiring.py  test_review_processors.py  test_schedule_risk.py
Middleware/Admin-API/: Dockerfile  README.md  pyproject.toml
Middleware/Admin-API/admin_api/api/: main.py
Middleware/Admin-API/admin_api/daos/: connection.py
Middleware/Admin-API/admin_api/dtos/: dataset.py
Middleware/Admin-API/tests/contract/: test_api_contract.py  test_auth.py  test_dataset_contract.py
Middleware/Admin-API/tests/unit/: test_agent_management_service.py
Middleware/Org-Management-API/: pyproject.toml
Middleware/Org-Management-API/org_management_api/api/: main.py
Middleware/Org-Management-API/org_management_api/daos/: connection.py
Middleware/Org-Management-API/tests/contract/: test_api_contract.py  test_auth.py
Middleware/Org-Management-API/tests/support/: __init__.py
Middleware/Org-Management-API/tests/unit/: test_access_resolution.py  test_membership_service.py  test_organization_service.py  test_repository_service.py
Middleware/Projects-API/: Dockerfile  README.md  pyproject.toml
Middleware/Projects-API/projects_api/api/: main.py
Middleware/Projects-API/projects_api/daos/: connection.py
Middleware/Projects-API/tests/contract/: test_api_contract.py  test_auth.py  test_org_scope.py  test_portfolio_summary_contract.py  test_project_groups_contract.py  test_project_search_contract.py
Middleware/Projects-API/tests/integration/: test_mongo_project_groups_dao.py  test_mongo_projects_dao.py
Middleware/Projects-API/tests/unit/: test_forecast_subjects.py  test_metrics_computation.py  test_org_gateway.py  test_portfolio_summary_service.py  test_project_groups_service.py  test_project_query_service.py
Middleware/RiskAnalytics-API/: Dockerfile  README.md  local-deps.txt  pyproject.toml
Middleware/RiskAnalytics-API/risk_analytics_api/api/: main.py
Middleware/RiskAnalytics-API/risk_analytics_api/daos/: connection.py
Middleware/RiskAnalytics-API/tests/contract/: test_api_contract.py  test_attention_contract.py  test_auth.py  test_dashboard_contract.py  test_decision_contract.py  test_investigate_contract.py  test_investigations_contract.py  test_org_scope.py  test_predict_contract.py
Middleware/RiskAnalytics-API/tests/graph_paths/: test_decision_options.py  test_investigation.py  test_predict_narrators.py  test_project_risk_manager.py  test_risk_review.py
Middleware/RiskAnalytics-API/tests/support/: __init__.py  llm.py  mongo.py  pg.py  pg_decisions.py  pg_predict.py
(+464 files in other folders)
