[project]
name = "epi-agents"
version = "0.1.0"
description = "Specialist risk agents (framework-agnostic port + adapters) for Enterprise Project Intelligence OS."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Alternative agent frameworks (installed only when that framework is selected).
# openai_agents is routed to Claude via LiteLLM (anthropic/<model>).
frameworks-openai = [
    "openai-agents[litellm]>=0.18",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_core*", "schedule_risk*", "quality_risk*", "project_status_tracking*", "dependency_risk*", "resource_risk*", "backlog_health*", "delivery_forecasting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
