[project]
name = "admin-api"
version = "0.1.0"
description = "Platform/agent/model/prompt/schedule/audit administration API for Enterprise Project Intelligence OS."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pg8000>=1.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["admin_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
