[project]
name = "projects-api"
version = "0.1.0"
description = "Project intelligence query API (reads the MongoDB evidence store) for Enterprise Project Intelligence OS."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymongo>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "mongomock>=4.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["projects_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
