[project]
name = "risk-analytics-api"
version = "0.1.0"
description = "Multi-agent risk analysis API (LangGraph) for Enterprise Project Intelligence OS."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pg8000>=1.31",
    "pymongo>=4.8",
    # The specialist agents (framework-agnostic port + LangGraph adapter).
    # Installed from the repo Agents/ package via `pip install -e ../../Agents`.
    "epi-agents",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_analytics_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
